   different code paths). This behavior 00 SOA and transfer on the
   same socket-- seems to be suggested by 1035 section 4.2.2:

     "In particular, the server should allow the SOA and AXFR request
     sequence (which begins a refresh operation) to be made on a
     single connection."

   Obviously, on the client side this behavior is not mandatory.





**** 0.55 December 14, 2005

Fix Inconsistency in test

   There was an inconsistency in the t/05-rr.t that got triggered by
   the release of Net::DNS::SEC version 0.13 (when installed). That
   has been fixed.

Feature Net::DNS::Nameserver loop_once()

   Uncommented the documentation of the loop_once() function and introduced
   get_open_tcp() that reports if there are any open TCP sockets (useful
   when using loop_once().

   loop_once() itself was introduced in version 0.53_02


Fix rt.cpan.org 16392

   TCP Sockets stayed open even if not requested. This may cause the kernel
   to run out of TCP slots. 

   This bug is the reason for releasing version 0.55 shortly after 0.54.

   Spotted and patched by Robert Felber.


*** 0.54 December 7, 2005


Fix rt.cpan.org 15947

  Failure to bind a nameserver when specifying an IPv6 address.

Fix rt.cpan.org 11931

  Using Net-DNS 0.53 on Win XP, it is unable to retrieve the
  nameservers when the IP address of the interface is assigned by
  DHCP.  This is due to the DHCP assigned IP address being stored in
  DhcpIPAddress rather than IPAddress (which is then 0.0.0.0).  Adding
  a check of DhcpIPAddress existance and not being 0.0.0.0 fixes the
  problem.  Applied the patch submitted by "orjan". 

Fix rt.cpan.org 15119

  main_loop() consumed 100% of memory, because of a bug that
  couced loop_once() to loop ad infinitum.

Fix rt.cpan.org 15299

  Defining multiple constants with 'use constant { BLA => 1, FOO =>2 };
  is a backwards incompatible feature. Thanks to Ian White for spotting and
  fixing this.

*** 0.53_02 Oct 18, 2005



Fix rt.cpan.org 14046
